kubernetes/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: media-hub
  name: media-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-hub
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: media-hub
    spec:
      containers:
      - image: beaware/media-hub:IMAGE_TAG
        imagePullPolicy: Always
        name: media-hub
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
